# DALM

./: .dockerignore  .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTORS  Dockerfile  LICENSE  Makefile  README.md  build.sh  index.html  waf  wercker.yml  wscript
MurmurHash3/: MurmurHash3.cpp  MurmurHash3.h  wscript
examples/: python_example.ipynb  query_example.cpp
include/: arpa_file.h  arpafile.h  bit_util.h  da.h  dalm.h  fileutil.h  fragment.h  handler.h  lm.h  pthread_wrapper.h  state.h  stopwatch.h  treefile.h  value_array.h  value_array_index.h  version.h  vocabulary.h
moses/: DALMWrapper.cpp
python/: _dalm.cpp  _dalm.h  dalm.py
sample/: compile.sh  query_sample.cpp  query_with_state_sample.cpp
scripts/: build_dalm.sh  common.rb  fp  getorder.rb  lookup_unigrams.rb  mktree1.rb  mktree2.rb  mktree3.rb  mktreefile.rb  mktreefile.sh  mkworddict.sh  wscript
src/: bst_da.cpp  build_da_util.cpp  build_util.cpp  builder.cpp  checker.cpp  da.cpp  dalm.cpp  dalm.h  dumper.cpp  embedded_da.cpp  exporter.cpp  fragment.cpp  lm.cpp  logger.cpp  mkworddict.cpp  pt_da.cpp  qpt_da.cpp  reverse_da.cpp  reverse_trie_da.cpp  value_array.cpp  vocabulary.cpp  vocabulary_file.cpp
src/dalm/: arpafile.h  bit_util.h  bit_vector.h  bst_da.h  build_da_util.h  buildutil.h  da.h  embedded_da.h  fileutil.h  fragment.h  handler.h  logger.h  pt_da.h  pthread_wrapper.h  qpt_da.h  reverse_da.h  reverse_trie_da.h  reversefile.h  sortutil.h  state.h  treefile.h  trie_reader.h  value_array.h  value_array_index.h  version.h  vocabulary.h  vocabulary_file.h
tests/: build_dalm_for_test.cpp  build_dalm_for_test.h  dalm_test_config.h.in  test_build.cpp  test_query.cpp
tests/data/: estimate.sh  kftt-tune.10.ja  kftt.2k.ja  kftt.2k.kenlm.arpa  test_files.txt  test_query_expected.txt
